--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -1,3 +1,5 @@
+@import "normalize.css";
+@import "https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic";
 * {
   box-sizing: border-box;
 }
